--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
@@ -39,6 +39,7 @@
     .mkhx-card-list { margin: auto; }
     .mkhx-card-list img { width:110px;height:110px; }
         .mkhx-card-list .btn { float: left; }
+            .mkhx-card-list .btn img { width: auto; height: auto; }
             .mkhx-card-list .btn span { width: 7em; display: inline-block; text-align: left; }
         .mkhx-card-list a.img-thumbnail { position: relative; }
             .mkhx-card-list a.img-thumbnail img { width: 1.5em; height: 1.5em; position: absolute; left: 0.35em; top: 0.5em; }
