--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
@@ -32,7 +32,7 @@
                         <a class="dropdown-item" href="https://mkhx.liucq.cn" target="_blank">模拟器<sub> <i class="fa fa-external-link"></i></sub></a>
                         @*<a class="dropdown-item" href="http://www.mkhx.cc" target="_blank">模拟器<sub> <i class="fa fa-external-link"></i></sub></a>*@
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/simulator/battlerecord">对战回放（未完成）</a>
+                        <a class="dropdown-item" href="/util/datacomparer">数据比较</a>
                     </div>
                 </li>
                 <li class="nav-item">
