对比表格改为全宽

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
@@ -23,6 +23,8 @@
             </li>
         </ul>
     </header>
+</div>
+<div class="container-fluid">
     <main>
         <div class="tab-content" id="v-pills-tabContent">
             <div class="tab-pane active show" id="compare" role="tabpanel" aria-labelledby="compare-tab">
