修正标签按钮文字

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
@@ -19,7 +19,7 @@
                 <a class="nav-link active" id="pills-compare-tab" data-toggle="pill" href="#compare" role="tab" aria-controls="pills-compare" aria-selected="false">对比</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="pills-compareresult-tab" data-toggle="pill" href="#compareresult" role="tab" aria-controls="pills-compareresult" aria-selected="false">compareresult</a>
+                <a class="nav-link" id="pills-compareresult-tab" data-toggle="pill" href="#compareresult" role="tab" aria-controls="pills-compareresult" aria-selected="false">对比结果</a>
             </li>
         </ul>
     </header>
