--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
@@ -29,8 +29,7 @@
                         工具
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="https://mkhx.liucq.cn" target="_blank">模拟器<sub> <i class="fa fa-external-link"></i></sub></a>
-                        @*<a class="dropdown-item" href="http://www.mkhx.cc" target="_blank">模拟器<sub> <i class="fa fa-external-link"></i></sub></a>*@
+                        <a class="dropdown-item" href="http://www.mkhx.top" target="_blank">模拟器<sub> <i class="fa fa-external-link"></i></sub></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/util/datacomparer">数据对比</a>
                     </div>
