技能效果、发动时间

--- a/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/detail.cshtml
@@ -40,9 +40,10 @@
 {15,"符文技能发动阶段" },
 {16,"卡牌从手牌上场后，或卡牌从墓地复活后的技能发动阶段" },
 {17,"符文技能发动阶段前" },
-{18,"18" },
-{19,"19" },
-{20,"20" },
+{18,"自身卡牌受到伤害时" },
+{19,"我方回合开始时" },
+{20,"敌方卡牌发动物理攻击前" },
+{21,"卡牌位于等待区时" },
 };
 
     var SkillCategory = new Dictionary<int, string> {
