--- a/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Util/DataComparer.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "数据对比";
+
+    var IsDevelopment = (ViewData["IsDevelopment"] as bool?) == true;
 }
 
 <style>
@@ -43,6 +45,10 @@
                                     <select class="form-control bg-dark text-white" name="oldVersion" id="cardOld">
                                         @foreach (var g in Model.Where(m => m.FileName == "allcards").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -56,6 +62,10 @@
                                     <select class="form-control bg-dark text-white" name="newVersion" id="cardNew">
                                         @foreach (var g in Model.Where(m => m.FileName == "allcards").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -73,6 +83,10 @@
                                     <select class="form-control bg-dark text-white" name="oldVersion" id="runeOld">
                                         @foreach (var g in Model.Where(m => m.FileName == "allrunes").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -86,6 +100,10 @@
                                     <select class="form-control bg-dark text-white" name="newVersion" id="runeNew">
                                         @foreach (var g in Model.Where(m => m.FileName == "allrunes").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -103,6 +121,10 @@
                                     <select class="form-control bg-dark text-white" name="oldVersion" id="skillOld">
                                         @foreach (var g in Model.Where(m => m.FileName == "allskills").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -116,6 +138,10 @@
                                     <select class="form-control bg-dark text-white" name="newVersion" id="skillNew">
                                         @foreach (var g in Model.Where(m => m.FileName == "allskills").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -133,6 +159,10 @@
                                     <select class="form-control bg-dark text-white" name="oldVersion" id="keywordOld">
                                         @foreach (var g in Model.Where(m => m.FileName == "keywords").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
@@ -146,6 +176,10 @@
                                     <select class="form-control bg-dark text-white" name="newVersion" id="keywordNew">
                                         @foreach (var g in Model.Where(m => m.FileName == "keywords").GroupBy(m => m.Server).OrderBy(m => m.Key))
                                         {
+                                            if (IsDevelopment && g.Key == "T")
+                                            {
+                                                continue;
+                                            }
                                             <optgroup label="@(g.Key)">
                                                 @foreach (var v in g)
                                                 {
